[package]
name = "echo-servers"
version = "0.1.0"
authors = ["Hiroki Yamamoto <562105+8mamo10@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6.1"
failure = "0.1.5"