[package]
name = "packet-capture"
version = "0.1.0"
authors = ["Hiroki Yamamoto <562105+8mamo10@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pnet = "0.22.0"
pnet = "0.26.0"
log = "0.4"
env_logger = "0.6.1"
